update port conflict validation to be optional by adding `check_port_conflict` query param to compose install and apply (#93)
